Arreglado un problema de padding de inputs en enders y terminado parcialmente las cards del framework

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,39 @@
 
 <body>
     <div class="cr container">
-        <div class="cr card">
-            <div class="card-head">Header</div>
+        <div class="cr card medium">
+            <button class="button-float">
+                <i class="material-icons">add</i>
+            </button>
+            <div class="card-head blue text-white">Formulario de contacto</div>
             <div class="card-body">
+                <div class="cr input label adaptive">
+                    <div class="label">Hola</div>
+                    <input class="input basic" type="text">
+                </div>
+
+                <div class="cr input label adaptive">
+                    <div class="label">Last Name</div>
+                    <input class="input basic" type="text">
+                </div>
+
+                <div class="cr input label adaptive">
+                    <div class="label">Email</div>
+                    <input class="input basic" type="text">
+                    <div class="ender">.com</div>
+                </div>
+
+                
+                <div class="cr input label adaptive">
+                    <div class="label">Email</div>
+                    <input class="input basic" value="https://www.google.com" type="text">
+                    <button class="ender">Copy</button>
+                </div>
+
             </div>
             <div class="card-footer">
+                <button class="cr button pink  pulse">Accept</button>
+                <button class="cr button pink  pulse ">Cancel</button>
             </div>
         </div>
         <div class="cr snackbar ">
