Mejoradas las cards ademas de implementado botones basic estilo material design

--- a/public/index.html
+++ b/public/index.html
@@ -17,52 +17,24 @@
 
 <body>
     <div class="cr container">
-        <div class="cr card medium">
-            <button class="button-float">
-                <i class="material-icons">add</i>
-            </button>
-            <div class="card-head blue text-white">Formulario de contacto</div>
+        <div class="cr card  small amber">
             <div class="card-body">
-                <div class="cr input label adaptive">
-                    <div class="label">Hola</div>
-                    <input class="input basic" type="text">
-                </div>
-
-                <div class="cr input label adaptive">
-                    <div class="label">Last Name</div>
-                    <input class="input basic" type="text">
-                </div>
-
-                <div class="cr input label adaptive">
-                    <div class="label">Email</div>
-                    <input class="input basic" type="text">
-                    <div class="ender">.com</div>
-                </div>
-
-                
-                <div class="cr input label adaptive">
-                    <div class="label">Email</div>
-                    <input class="input basic" value="https://www.google.com" type="text">
-                    <button class="ender">Copy</button>
-                </div>
-
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.
             </div>
             <div class="card-footer">
-                <button class="cr button pink  pulse">Accept</button>
-                <button class="cr button pink  pulse ">Cancel</button>
+                <button class="cr simple button indigo pulse">ACTION 1</button>
+                <button class="cr simple button indigo pulse">ACTION 2</button>
+                <button class="cr simple button indigo pulse">ACTION 3</button>
             </div>
         </div>
-        <div class="cr snackbar ">
-            <span class="snack-message"></span>
-            <button class="snack action undo">UNDO</button>
-        </div>
+      
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
     <script>
-    $('.ender').on('click', function() {
-        $(".cr.snackbar").snackbar('show', "Copied");
-    })
     </script>
 </body>
 
