Modificado los cards, ahora tienen correctamente el footer como debe ser

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>LearnDesign</title>
     <style type="text/css">
-
     .sep {
         padding-top: 20px;
     }
@@ -17,20 +16,16 @@
 
 <body>
     <div class="cr container">
-        <div class="cr card  small amber">
+        <div class="cr card small">
+            <div class="card-head ">Short Enemy Description</h1></div>
             <div class="card-body">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </div>
-            <div class="card-footer">
-                <button class="cr simple button indigo pulse">ACTION 1</button>
-                <button class="cr simple button indigo pulse">ACTION 2</button>
-                <button class="cr simple button indigo pulse">ACTION 3</button>
+            <div class="card-footer ">
+                    <button class="cr simple button   pulse ">ACCEPT</button>
+                    <button class="cr simple button   pulse">DENY</button>
             </div>
         </div>
-      
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
