Mejorado denuevo los cars y corregido algunos bugs al variar el tamano de la pantalla, es preciso mejorar las cards de diferentes tamanos para ofrecer diversas acciones entre animaciones, contenido dinamico, e imagenes dentro de ellas, de esta manera se puede lograr un componente mucho mas completo, posteriormente se debe proseguir  con los modals que en teoria son lo mismo

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,23 @@
 
 <body>
     <div class="cr container">
-        <div class="cr card small">
-            <div class="card-head ">Short Enemy Description</h1></div>
-            <div class="card-body">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <div class="cr card noraise ">
+            <div class="card-head pink">Short  Description</div>
+            <div class="card-body pink">
+                Las Cartas Tienen Por Tamaño Default 250px de ancho y son usadas para mostrar informacion 
+                de cualquier longitud
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
             <div class="card-footer ">
-                    <button class="cr simple button   pulse ">ACCEPT</button>
-                    <button class="cr simple button   pulse">DENY</button>
+                    <button class="cr simple button rounded pulse">Close
+                        <i class="material-icons">close</i>
+                    </button>
+                    <button class="cr simple button  pulse">DENY</button>
             </div>
         </div>
     </div>
