--- a/public/index.html
+++ b/public/index.html
@@ -16,23 +16,41 @@
 
 <body>
     <div class="cr container">
-        <div class="cr card noraise ">
-            <div class="card-head pink">Short  Description</div>
-            <div class="card-body pink">
-                Las Cartas Tienen Por Tamaño Default 250px de ancho y son usadas para mostrar informacion 
-                de cualquier longitud
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="cr card ">
+            <div class="card-head indigo">Short Description</div>
+         <!--    <div class="card-body  ">
+                <div class="cr input label adaptive">
+                    <div class="label">Name</div>
+                    <input class="in-label" type="text">
+                </div>
+                <div class="cr input label adaptive">
+                    <div class="label">Email</div>
+                    <input class="in-label validate email" type="text">
+                    <span class="cr-message"></span> 
+                    Necesita llevar span y todo input que tenga la clase validate para los input label se usa in-label
+                    para los basic se utiliza in-basic
+                </div>
+                <div class="cr input label adaptive">
+                    <div class="label">Age</div>
+                    <input class="in-label validate numbers" type="text">
+                    <span class="cr-message"></span>
+                </div>
+                <div class="cr input label adaptive">
+                    <div class="label">URL</div>
+                    <input class="in-label" type="text">
+                    <div class="ender">.com</div>
+                </div>
+            </div> -->
+            <div class="card-body">
+                <div class="cr-material-field ">
+                    <label class="m-label">Name</label>
+                    <input class="m-input validate email" name="">
+                </div>  
             </div>
             <div class="card-footer ">
-                    <button class="cr simple button rounded pulse">Close
-                        <i class="material-icons">close</i>
-                    </button>
-                    <button class="cr simple button  pulse">DENY</button>
+                <button class="cr simple button  pulse">Close
+                </button>
+                <button class="cr simple button  pulse">DENY</button>
             </div>
         </div>
     </div>
