Agregado img-section a los cards que permitiran una mayor facilidad para mostrar imagenes dentro de un card, logrando dar efecto de profile-card. Sin embargo la imagen se adapta perfectamente en ancho y alto al container, hay que obviamente agregar para que funcione en tamaño pequeño, muy pequeño, mediano y grande. Luego de esto hay que implementar animaciones a la imagen en el card y/o variantes que le den mas dinamismo a la misma. Seguido de eso agregar botones flotantes y así poder mejorar aun más la calidad del componente. Luego de todo esto, documentar el codigo en github con ejemplos de cada uno de los componentes para poder recordar bien su utilizacion

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>LearnDesign</title>
     <style type="text/css">
+   
     .sep {
         padding-top: 20px;
     }
@@ -15,9 +16,15 @@
 </head>
 
 <body>
+    <button class="cr button float pulse">
+        <i class="material-icons">add</i>
+    </button>
     <div class="cr container">
         <div class="cr card ">
-            <div class="card-head indigo">Short Description</div>
+            <div class="card-head  indigo">Short Description</div>
+            <div class="img-section">
+                <img src="http://aspirehire-co-uk.mysmarterwebsite.co.uk/aspirehire-co-uk/_img/profile.svg">
+            </div>
          <!--    <div class="card-body  ">
                 <div class="cr input label adaptive">
                     <div class="label">Name</div>
@@ -41,16 +48,22 @@
                     <div class="ender">.com</div>
                 </div>
             </div> -->
-            <div class="card-body">
+            <div class="card-body ">
+               <!--  <div class="cr-material-field ">
+                    <label class="m-label">Name</label>
+                    <input class="m-input validate email">
+                    <span data-positive="done" data-error="error" class="m-state"></span>
+                </div>  
                 <div class="cr-material-field ">
                     <label class="m-label">Name</label>
-                    <input class="m-input validate email" name="">
-                </div>  
+                    <input class="m-input validate email">
+                    <span  class="m-state"></span>
+                </div> -->
+                
             </div>
-            <div class="card-footer ">
-                <button class="cr simple button  pulse">Close
-                </button>
-                <button class="cr simple button  pulse">DENY</button>
+            <div class="card-footer indigo ">
+                <button class="cr simple button white pulse">CLOSE</button>
+                <button class="cr simple button white pulse">DENY</button>
             </div>
         </div>
     </div>
