--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>LearnDesign</title>
     <style type="text/css">
-   
     .sep {
         padding-top: 20px;
     }
@@ -22,8 +21,8 @@
     <div class="cr container">
         <div class="cr card ">
             <div class="card-head  indigo">Short Description</div>
-            <div class="img-section">
-                <img src="http://aspirehire-co-uk.mysmarterwebsite.co.uk/aspirehire-co-uk/_img/profile.svg">
+            <div data-feature="Like" class="img-section raised">
+                <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
             </div>
          <!--    <div class="card-body  ">
                 <div class="cr input label adaptive">
@@ -48,8 +47,8 @@
                     <div class="ender">.com</div>
                 </div>
             </div> -->
-            <div class="card-body ">
-               <!--  <div class="cr-material-field ">
+           <!--  <div class="card-body ">
+                <div class="cr-material-field ">
                     <label class="m-label">Name</label>
                     <input class="m-input validate email">
                     <span data-positive="done" data-error="error" class="m-state"></span>
@@ -58,9 +57,9 @@
                     <label class="m-label">Name</label>
                     <input class="m-input validate email">
                     <span  class="m-state"></span>
-                </div> -->
-                
-            </div>
+                </div>
+
+            </div> -->
             <div class="card-footer indigo ">
                 <button class="cr simple button white pulse">CLOSE</button>
                 <button class="cr simple button white pulse">DENY</button>
