Mejorado card con hover effect, y lo he llamado cr feature, que es valido con los card

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,19 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <div class="cr card ">
+        <div class="cr card small">
             <div class="card-head  indigo">Short Description</div>
-            <div data-feature="Like" class="img-section raised">
-                <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
+
+            <div class="img-section">
+                <div class="cr feature">
+                   <div class="content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit.
+                   </div>
+                </div>
+                <img class="medium" src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
             </div>
          <!--    <div class="card-body  ">
                 <div class="cr input label adaptive">
@@ -58,7 +67,6 @@
                     <input class="m-input validate email">
                     <span  class="m-state"></span>
                 </div>
-
             </div> -->
             <div class="card-footer indigo ">
                 <button class="cr simple button white pulse">CLOSE</button>
