Corregido un pequeño error en los inputs y agregado mejoras en los cards

--- a/public/index.html
+++ b/public/index.html
@@ -19,59 +19,9 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <div class="cr card small">
-            <div class="card-head  indigo">Short Description</div>
-
-            <div class="img-section">
-                <div class="cr feature">
-                   <div class="content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit.
-                   </div>
-                </div>
-                <img class="medium" src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-         <!--    <div class="card-body  ">
-                <div class="cr input label adaptive">
-                    <div class="label">Name</div>
-                    <input class="in-label" type="text">
-                </div>
-                <div class="cr input label adaptive">
-                    <div class="label">Email</div>
-                    <input class="in-label validate email" type="text">
-                    <span class="cr-message"></span> 
-                    Necesita llevar span y todo input que tenga la clase validate para los input label se usa in-label
-                    para los basic se utiliza in-basic
-                </div>
-                <div class="cr input label adaptive">
-                    <div class="label">Age</div>
-                    <input class="in-label validate numbers" type="text">
-                    <span class="cr-message"></span>
-                </div>
-                <div class="cr input label adaptive">
-                    <div class="label">URL</div>
-                    <input class="in-label" type="text">
-                    <div class="ender">.com</div>
-                </div>
-            </div> -->
-           <!--  <div class="card-body ">
-                <div class="cr-material-field ">
-                    <label class="m-label">Name</label>
-                    <input class="m-input validate email">
-                    <span data-positive="done" data-error="error" class="m-state"></span>
-                </div>  
-                <div class="cr-material-field ">
-                    <label class="m-label">Name</label>
-                    <input class="m-input validate email">
-                    <span  class="m-state"></span>
-                </div>
-            </div> -->
-            <div class="card-footer indigo ">
-                <button class="cr simple button white pulse">CLOSE</button>
-                <button class="cr simple button white pulse">DENY</button>
-            </div>
+        <div class="cr input label">
+            <div class="label">Name</div>
+            <input class=""></input>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
