--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
     <div class="cr container">
         <div class="cr input label">
             <div class="label">Name</div>
-            <input class=""></input>
+            <input class="blue-outline error"></input>
+            <div class="ender">.com</div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
