Mejorado la posicion de los ender y agregado clase de colores para que puedan colorearse al gusto del usuario, antes parece que la posicion de los ender variaba dependiendo del tipo de pantalla, ahora ya no es posible que suceda

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,8 @@
     </button>
     <div class="cr container">
         <div class="cr input label">
-            <div class="label">Name</div>
-            <input class="blue-outline error"></input>
-            <div class="ender">.com</div>
+            <div class="label blue">Name</div>
+            <input class="blue-font"></input>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
