Primera version del checkbox con muchos bugs que hay que corregir

--- a/public/index.html
+++ b/public/index.html
@@ -21,22 +21,23 @@
     </button>
     <div class="cr container">
         <div class="row">
-            <div class="col-md-6">
-                <div class="cr-material-field black">
-                    <label class="m-label">Name</label>
-                    <input class="m-input validate numbers" type="text" name="">
-                    <span data-positive="Good, it's a number" data-error="This is not a number" class="m-state"></span>
+            <div class="col-md-4 col-xs-12">
+                <div class="cr checkbox">
+                    <input type="checkbox" name="c1">
+                    <label for="c1">labsdasdasdadadasdasdadasdasdadasdasdasd
+                    adasdadasdel</label>
+                </div>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <div class="cr input label adaptive">
+                    <div class="label">Name</div>
+                    <input class="in-label validate numbers" type="text" name="">
                 </div>
             </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
-    <script>
-    $("#btnClear").click(function() {
-        $("#input1").val("");
-    })
-    </script>
 </body>
 
 </html>
