Checkboxes terminado, incluyendo con el efecto ripple, falta simplemente agregar las respectivas clases de color para poder personalizar el color a nuestro parecer sin tener que modificar el accent

--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,14 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
+            <div class="sep"></div>
+        
         <div class="row">
             <div class="col-md-4 col-xs-12">
-                <div class="cr checkbox">
+                <div class="cr checkbox pulse">
                     <input type="checkbox" name="c1">
-                    <label for="c1">labsdasdasdadadasdasdadasdasdadasdasdasd
-                    adasdadasdel</label>
+                    <label for="c1">CheckBox</label>
+                    <span class="pulse"></span>
                 </div>
             </div>
             <div class="col-md-6 col-xs-12">
