Checkbox termindo , radio button terminado parcialmente
Falta terminar el radio button ya que esta solamente el esqueleto, falta
terminar por completo la fase de estilizar

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,14 @@
         
         <div class="row">
             <div class="col-md-4 col-xs-12">
-                <div class="cr checkbox pulse">
+                <!-- <div class="cr checkbox variant pulse">
                     <input type="checkbox" name="c1">
                     <label for="c1">CheckBox</label>
                     <span class="pulse"></span>
+                </div> -->
+                <div class="cr radio-button">
+                    <input type="radio" name="c1">
+                    <label for="c1">RadioButton</label>
                 </div>
             </div>
             <div class="col-md-6 col-xs-12">
