Radio buttons tienen el mismo bug que tenian al principio los checkboxes que no se posicionan correctamente

--- a/public/index.html
+++ b/public/index.html
@@ -20,24 +20,20 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-            <div class="sep"></div>
-        
+        <div class="sep"></div>
         <div class="row">
             <div class="col-md-4 col-xs-12">
-                <!-- <div class="cr checkbox variant pulse">
-                    <input type="checkbox" name="c1">
-                    <label for="c1">CheckBox</label>
-                    <span class="pulse"></span>
-                </div> -->
-                <div class="cr radio-button">
+                <div class="cr radio-button variant pulse">
                     <input type="radio" name="c1">
                     <label for="c1">RadioButton</label>
+                    <span class="pulse"></span>
                 </div>
             </div>
             <div class="col-md-6 col-xs-12">
-                <div class="cr input label adaptive">
-                    <div class="label">Name</div>
-                    <input class="in-label validate numbers" type="text" name="">
+                <div class="cr radio-button variant pulse">
+                    <input type="radio" name="c1">
+                    <label for="c1">RadioButton</label>
+                    <span class="pulse"></span>
                 </div>
             </div>
         </div>
