--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,19 @@
         <div class="sep"></div>
         <div class="row">
             <div class="col-md-4 col-xs-12">
-                <div class="cr radio-button variant pulse">
+               <!--  <div class="cr radio-button blue pulse">
                     <input type="radio" name="c1">
                     <label for="c1">RadioButton</label>
+                    <span class="pulse"></span>
+                </div> -->
+                <div class="cr checkbox pulse">
+                    <input type="checkbox" name="in1">
+                    <label for="in1">CheckBox</label>
                     <span class="pulse"></span>
                 </div>
             </div>
             <div class="col-md-6 col-xs-12">
-                <div class="cr radio-button variant pulse">
+                <div class="cr radio-button blue variant pulse">
                     <input type="radio" name="c1">
                     <label for="c1">RadioButton</label>
                     <span class="pulse"></span>
