--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,15 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <div class="cr-material-field black">
+        <!-- <div class="cr-material-field black">
             <label class="m-label">Name</label>
             <input class="m-input" type="text" name="">
             <span data-positive="Good, it's a number" data-error="This is not a number" class="m-state"></span>
+        </div> -->
+
+        <div class="cr input label large ">
+            <div class="label">ds</div>
+            <input class="in-label " type="text" name="">
         </div>
 
         <div id="snack1" class="cr snackbar">
