Implementado el mistery-cake, que es basicamente un especie de card que no revela su contenido hasta que el mouse pase sobre el, es increible

--- a/public/index.html
+++ b/public/index.html
@@ -24,30 +24,65 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <!-- <div class="cr-material-field black">
-            <label class="m-label">Name</label>
-            <input class="m-input" type="text" name="">
-            <span data-positive="Good, it's a number" data-error="This is not a number" class="m-state"></span>
+        <!--  <div class="row">
+            <div class="col-md-6">
+                <div class="cr card dark-bg">
+                    <div class="card-head">So far Away (Martin Garrix & David Guetta)</div>
+                    <div class="img-section">
+                        <img class="adaptive" src="https://i.scdn.co/image/93b35ff46a64bbe150ef63c8656cc0c137e4960f">
+                    </div>
+                    <div class="card-body text-center">
+                        So far away it's a song produced by Martin Garrix and David Guetta, released on December 1 2017.
+                    </div>
+                    <div class="card-footer ">
+                        <div class="row ">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="cr simple button green pulse adaptive">PLAY</div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="cr simple button green pulse adaptive">NEXT</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+            </div>
         </div> -->
-
-        <div class="cr input label large ">
-            <div class="label">ds</div>
-            <input class="in-label " type="text" name="">
-        </div>
-
-        <div id="snack1" class="cr snackbar">
-            <div class="snack-message"></div>
-            <button class="snack action">COPY</button>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="mistery-cake">
+                    <div class="content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
+                    </div>
+                    <span class="m-pulse"></span>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mistery-cake">
+                    <div class="content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="mistery-cake">
+                    <div class="content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="mistery-cake">
+                    <div class="content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
-    <script type="text/javascript">
-    $("button").click(function(e) {
-        e.preventDefault();
-        $("#snack1").snackbar("show", "Message you want");
-    });
-    </script>
 </body>
 
 </html>
