Corregido un poco los mistery-cakes

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
     <title>LearnDesign</title>
     <style type="text/css">
     body {
-        /*background: #000;*/
     }
 
     .sep {
@@ -50,7 +49,8 @@
             </div>
         </div> -->
         <div class="row">
-            <div class="col-md-4">
+       
+            <div class="col-xs-12 col-md-6">
                 <div class="mistery-cake">
                     <div class="content">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
@@ -58,25 +58,12 @@
                     <span class="m-pulse"></span>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="mistery-cake">
+            <div class="col-xs-12 col-md-6">
+               <div class="mistery-cake">
                     <div class="content">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
                     </div>
-                </div>
-            </div>
-             <div class="col-md-4">
-                <div class="mistery-cake">
-                    <div class="content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
-                    </div>
-                </div>
-            </div>
-             <div class="col-md-4">
-                <div class="mistery-cake">
-                    <div class="content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
-                    </div>
+                    <span class="m-pulse"></span>
                 </div>
             </div>
         </div>
