--- a/public/index.html
+++ b/public/index.html
@@ -51,19 +51,20 @@
         <div class="row">
        
             <div class="col-xs-12 col-md-6">
-                <div class="mistery-cake">
-                    <div class="content">
+                <div class="cake black">
+                    <div class="content ">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
                     </div>
-                    <span class="m-pulse"></span>
+                  <!--   <i class="material-icons">code</i> -->
+                  <img class="rounded fade " src="https://i.scdn.co/image/93b35ff46a64bbe150ef63c8656cc0c137e4960f">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-               <div class="mistery-cake">
+               <div class="cake">
+                     <i class="material-icons">code</i>
                     <div class="content">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
                     </div>
-                    <span class="m-pulse"></span>
                 </div>
             </div>
         </div>
