Terminado los cakes y documentado en el README

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../Css/Grid/flexboxgrid.min.css">
     <title>LearnDesign</title>
     <style type="text/css">
-    body {
-    }
+    body {}
 
     .sep {
         padding-top: 20px;
@@ -23,51 +22,8 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <!--  <div class="row">
-            <div class="col-md-6">
-                <div class="cr card dark-bg">
-                    <div class="card-head">So far Away (Martin Garrix & David Guetta)</div>
-                    <div class="img-section">
-                        <img class="adaptive" src="https://i.scdn.co/image/93b35ff46a64bbe150ef63c8656cc0c137e4960f">
-                    </div>
-                    <div class="card-body text-center">
-                        So far away it's a song produced by Martin Garrix and David Guetta, released on December 1 2017.
-                    </div>
-                    <div class="card-footer ">
-                        <div class="row ">
-                            <div class="col-xs-12 col-md-6">
-                                <div class="cr simple button green pulse adaptive">PLAY</div>
-                            </div>
-                            <div class="col-xs-12 col-md-6">
-                                <div class="cr simple button green pulse adaptive">NEXT</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-            </div>
-        </div> -->
-        <div class="row">
-       
-            <div class="col-xs-12 col-md-6">
-                <div class="cake black">
-                    <div class="content ">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
-                    </div>
-                  <!--   <i class="material-icons">code</i> -->
-                  <img class="rounded fade " src="https://i.scdn.co/image/93b35ff46a64bbe150ef63c8656cc0c137e4960f">
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-               <div class="cake">
-                     <i class="material-icons">code</i>
-                    <div class="content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, necessitatibus. Sunt numquam a, expedita vel repellat quos, soluta quidem. Quos officiis delectus nostrum nisi officia rerum, aliquid vitae et ad.
-                    </div>
-                </div>
-            </div>
-        </div>
+        
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
